--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -1,7 +1,7 @@
 {% if projects %}
     <ul>
     {% for project in projects %}
-        <li><a href="/projects/{{ project.id }}/">{{ project.name }}</a></li>
+        <li><a href="{% url 'projects:project' project.id %}">{{ project.name }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
