Updates to base and index files

--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -10,6 +10,11 @@
 <head>
 
 <body>
+
+    {% block header %}{% endblock %}
+
+    <div class="ui main text container">
     {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
