--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -10,11 +10,30 @@
 <head>
 
 <body>
+    <div class="ui inverted vertical masthead center aligned segment">
+        <div class="ui container">
+            <div class="ui large secondary inverted pointing menu">
+                <!--<a class="toc item">
+                <i class="sidebar icon"></i>
+                </a>
+                <a class="active item">Home</a>
+                <a class="item">Work</a>
+                <a class="item">Company</a>
+                <a class="item">Careers</a>-->
+            <!-- User controls -->
+                <!--<div class="right item">
+                    <a class="ui inverted button">Log in</a>
+                    <a class="ui inverted button">Sign Up</a>
+                </div>-->
+            </div>
+        </div>
+        {% block header %}{% endblock %}
+    </div>
 
-    {% block header %}{% endblock %}
-
-    <div class="ui main text container">
-    {% block content %}{% endblock %}
+    <div class="ui center aligned grid">
+        <div class="left aligned twelve wide column">
+            {% block content %}{% endblock %}
+        </div>
     </div>
 </body>
 </html>
