index can now take a hackathon. WIP implementation

--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -3,8 +3,8 @@
 {% block header %}
     <div class="ui text container">
         <h1 class="ui inverted header">
-            {% if current_hackathon %}
-                Hackathon {{ current_hackathon }}
+            {% if hackathon %}
+                Hackathon {{ hackathon }}
             {% else %}
                 Hackathon <i class="coffee icon"></i>
             {% endif %}
