Made it so that only projects in the requested hackathon (default = current) are displayed on the index, unless no hackathon is requested, in which case all are displayed (to be changed to latest/upcoming?)

--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -4,7 +4,7 @@
     <div class="ui text container">
         <h1 class="ui inverted header">
             {% if hackathon %}
-                Hackathon {{ hackathon }}
+                Hackathon #{{ hackathon }}
             {% else %}
                 Hackathon <i class="coffee icon"></i>
             {% endif %}
