--- a/projects/templates/projects/edit.html
+++ b/projects/templates/projects/edit.html
@@ -2,11 +2,11 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form action="/projects/edit/1/" method="post">
+<form action="{% url 'projects:edit_project' project.id %}" method="post">
     {% csrf_token %}
     {% if form %}
         <ul>
-        {{form.as_p}} 
+        {{form.as_p}}
         </ul>
     {% endif %}
     <input type="submit" value="Submit" />
