--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -6,7 +6,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'semantic/dist/semantic.min.css' %}" />
     <script src="{% static 'semantic/dist/semantic.min.js' %}"></script>
-    <title>{% block title %}Metathon{% endblock %}</title>
+    <title>{% block title %}Hackathon{% endblock %}</title>
 <head>
 
 <body>
