--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -18,10 +18,10 @@
             <i class="cubes icon"></i>&nbsp;Project
         </h1>
         <h2>{{project}}</h2>
+        <a class="ui secondary button" href="{% url 'projects:edit_project' project.id %}">Edit&nbsp;&nbsp;&nbsp;<i class="edit icon"></i></a>
         {% if project.spaces_left %}
-            <div class="ui huge primary button">Join<i class="right arrow icon"></i></div>
+            <div class="ui primary button">Join<i class="right arrow icon"></i></div>
         {% endif %}
-        <a class="ui huge primary button" href="{% url 'projects:edit_project' project.id %}">Edit&nbsp;&nbsp;&nbsp;<i class="edit icon"></i></a>
         {% if project.spaces_left == False %}
             <div class="ui bottom left attached teal label">Project Full</div>
         {% endif %}
