Improved form layout

--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -4,12 +4,11 @@
 {% endblock title %}
 {% block header %}
 <div class="ui inverted vertical masthead center aligned segment">
-
-    <div class="ui borderless compact inverted menu">
+    <div class="ui borderless compact inverted menu left attached">
         <div class="ui container">
-        <a href="javascript:history.go(-1)" class="header item">
-            <i class="left arrow icon"></i>
-        </a>
+            <a href="javascript:history.go(-1)" class="header item">
+                <i class="left arrow icon"></i>
+            </a>
         </div>
     </div>
 
