--- a/projects/templates/projects/form_base.html
+++ b/projects/templates/projects/form_base.html
@@ -1,22 +1,36 @@
 {% extends 'projects/base.html' %}
 
 {% block header %}
-<h1>{% block form_header %}{% endblock %}</h1>
+<div class="ui inverted vertical masthead center aligned segment">
+    <div class="ui borderless compact inverted menu left attached">
+        <div class="ui container">
+            <a href="javascript:history.go(-1)" class="header item">
+                <i class="left arrow icon"></i>
+            </a>
+        </div>
+    </div>
+    <div class="ui text container">
+        <h1 class="ui inverted header">
+            {% block form_header %}{% endblock %}
+        </h1>
+    </div>
+</div>
 {% endblock %}
 
 {% block content %}
+<div class="ui text container">
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
+    <form class="ui form" {% block form_attrs %}{% endblock %}>
+        {% csrf_token %}
+        {% if form %}
+            <ul>
+            {{form.as_p}}
+            </ul>
+        {% endif %}
+        <button class="ui button" type="submit">Submit</button>
+    </form>
 
-<form {% block form_attrs %}{% endblock %}>
-    {% csrf_token %}
-    {% if form %}
-        <ul>
-        {{form.as_p}}
-        </ul>
-    {% endif %}
-    <input type="submit" value="Submit" />
-</form>
-
+</div>
 {% endblock %}
