--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -36,7 +36,7 @@
 <div class="ui text container">
     <div class="ui vertical stripe segment">
         <h3 class="ui horizontal divider header">
-            <i class="paint brush icon"></i> Author : {{ project.author }}
+            <!--<i class="paint brush icon"></i>--> Author: {{ project.author }}
         </h3>
         <h3 class="ui horizontal divider header">
             <i class="user icon"></i> Participants
