Generalised the header, so all pages support a login banner. Updated the project pages to use the new header.

--- a/projects/templates/projects/form_base.html
+++ b/projects/templates/projects/form_base.html
@@ -1,19 +1,17 @@
-{% extends 'projects/base.html' %}
+{% extends 'base.html' %}
 
 {% block header %}
-<div class="ui inverted vertical masthead center aligned segment">
-    <div class="ui borderless compact inverted menu left attached">
-        <div class="ui container">
-            <a href="javascript:history.go(-1)" class="header item">
-                <i class="left arrow icon"></i>
-            </a>
-        </div>
+<div class="ui borderless compact inverted menu left attached">
+    <div class="ui container">
+        <a href="javascript:history.go(-1)" class="header item">
+            <i class="left arrow icon"></i>
+        </a>
     </div>
-    <div class="ui text container">
-        <h1 class="ui inverted header">
-            {% block form_header %}{% endblock %}
-        </h1>
-    </div>
+</div>
+<div class="ui text container">
+    <h1 class="ui inverted header">
+        {% block form_header %}{% endblock %}
+    </h1>
 </div>
 {% endblock %}
 
