--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -1,42 +1,41 @@
-{% extends "projects/base.html" %}
+{% extends "base.html" %}
 {% block title %}
     {{ project.name }}
 {% endblock title %}
 {% block header %}
-<div class="ui inverted vertical masthead center aligned segment">
-    <div class="ui borderless compact inverted menu left attached">
-        <div class="ui container">
-            <a href="javascript:history.go(-1)" class="header item">
-                <i class="left arrow icon"></i>
-            </a>
-        </div>
+<div class="ui borderless compact inverted menu left attached">
+    <div class="ui container">
+        <a href="javascript:history.go(-1)" class="header item">
+            <i class="left arrow icon"></i>
+        </a>
     </div>
+</div>
 
-    <div class="ui text container">
-        <h1 class="ui inverted header">
-            <i class="cubes icon"></i>&nbsp;Project
-        </h1>
-        <h2>{{project}}</h2>
-        <a class="ui secondary button" href="{% url 'projects:edit_project' project.id %}">Edit&nbsp;&nbsp;&nbsp;<i class="edit icon"></i></a>
-        {% if project.spaces_left %}
-            <div class="ui primary button">Join<i class="right arrow icon"></i></div>
-        {% endif %}
-        {% if project.spaces_left == False %}
-            <div class="ui bottom left attached teal label">Project Full</div>
-        {% endif %}
-        {% if project.hackathon %}
-            <div class="ui bottom right attached teal label">{{ project.hackathon }}</div>
-        {% else %}
-            <div class="ui bottom right attached red label">No Hackathon Assigned</div>
-        {% endif %}
-    </div>
+<div class="ui text container">
+    <h1 class="ui inverted header">
+        <i class="cubes icon"></i>&nbsp;Project
+    </h1>
+    <h2>{{project}}</h2>
+    <h3>Author: {{ project.author }}</h3>
+    <a class="ui secondary button" href="{% url 'projects:edit_project' project.id %}">Edit&nbsp;&nbsp;&nbsp;<i class="edit icon"></i></a>
+    {% if project.spaces_left %}
+        <div class="ui primary button">Join<i class="right arrow icon"></i></div>
+    {% endif %}
+    {% if project.spaces_left == False %}
+        <div class="ui bottom left attached teal label">Project Full</div>
+    {% endif %}
+    {% if project.hackathon %}
+        <div class="ui bottom right attached teal label">{{ project.hackathon }}</div>
+    {% else %}
+        <div class="ui bottom right attached red label">No Hackathon Assigned</div>
+    {% endif %}
 </div>
 {% endblock %}
 {% block content %}
 <div class="ui text container">
     <div class="ui vertical stripe segment">
         <h3 class="ui horizontal divider header">
-            <!--<i class="paint brush icon"></i>--> Author: {{ project.author }}
+            <!--<i class="paint brush icon"></i>--> 
         </h3>
         <h3 class="ui horizontal divider header">
             <i class="user icon"></i> Participants
