--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -2,15 +2,16 @@
 {% block title %}
     {{ project.name }}
 {% endblock title %}
-{% block header %}
-<div class="ui borderless compact inverted menu left attached">
-    <div class="ui container">
-        <a href="javascript:history.go(-1)" class="header item">
-            <i class="left arrow icon"></i>
-        </a>
-    </div>
-</div>
 
+{% block left_menu %}
+<div class="ui container">
+    <a href="javascript:history.go(-1)" class="header item">
+        <i class="left arrow icon"></i>
+    </a>
+</div>
+{% endblock %}
+
+{% block header %}
 <div class="ui text container">
     <h1 class="ui inverted header">
         <i class="cubes icon"></i>&nbsp;Project
