Adding comments infrastructure and restructuring forms templates for resuse

--- a/projects/templates/projects/edit.html
+++ b/projects/templates/projects/edit.html
@@ -1,4 +1,4 @@
-{% extends 'projects/form_base.html' %}
+{% extends 'projects/project_form_base.html' %}
 
 {% block title %}
     Edit Project: {{ project.name }}
