--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends 'base.html'' %}
+
 {% block title %}
     {{ project.name }}
 {% endblock title %}
@@ -36,7 +37,7 @@
 <div class="ui text container">
     <div class="ui vertical stripe segment">
         <h3 class="ui horizontal divider header">
-            <!--<i class="paint brush icon"></i>--> 
+            <!--<i class="paint brush icon"></i>-->
         </h3>
         <h3 class="ui horizontal divider header">
             <i class="user icon"></i> Participants
