--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -23,8 +23,8 @@
         {% endif %}
     </h1>
     <h2>View, join or create projects for the next Hackathon.</h2>
-    <a class="ui huge primary button" href="{% url 'projects:add_project' %}">Create <i class="plus icon"></i></a>
-    <div class="ui huge primary button">Join<i class="right arrow icon"></i></div>
+    <a class="ui huge primary button" href="{% url 'projects:add_project' %}">Create&nbsp;<i class="plus icon"></i></a>
+    <a class="ui huge primary button">Join&nbsp;<i class="right arrow icon"></i></a>
 </div>
 {% endblock %}
 
@@ -52,32 +52,17 @@
                                 {{ project.description|truncatechars:240 }}
                             </div>
                         </div>
-                    <!-- <div class="extra content">-->
                             <div class="ui two bottom attached buttons">
                                 <a class="ui button" href="{% url 'projects:project' project.id %}">View</a>
                                 <div class="ui primary button">Join</div>
                             </div>
-                        <!--</div>-->
                     </div>
                 {% endfor %}
                 </div>
-    <!--            <div class="ui divided selection list">
-                {% for project in projects %}
-                    <div class="item">
-                        <a class="header" href="{% url 'projects:project' project.id %}">
-                            {{ project.name }}
-                        </a>
-                            <!--<div class="header">{{ project.name }}</div>-->
-    <!--                    </a>
-                        <div class="description">
-                            <p>{{ project.description|truncatechars:80 }}</p>
-                        </div>
-                    </div>
-                {% endfor %}
-                </div>-->
 
             {% else %}
                 <p>This hackathon has no projects!</p>
+
             {% endif %}
         </div>
     </div>
