--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -1,4 +1,5 @@
-{% extends 'base.html'' %}
+{% extends 'base.html' %}
+{% load comments %}
 
 {% block title %}
     {{ project.name }}
@@ -77,7 +78,33 @@
                 <a class="ui label">{{ tag }}<i class="delete icon"></i></a>
             {% endfor %}
         {% endif %}
-    <table>
+    </div>
+
+    <div class="ui basic segment">
+        <h3 class="ui horizontal divider header">
+            <i class="comments icon"></i> Comments
+        </h3>
+        <div class="ui text container">
+            {% render_comment_list for project %}
+
+            {% if user.is_authenticated %}
+                {% get_comment_form for project as form %}
+                <form class="ui form" action="{% comment_form_target %}" method="POST">
+                    {% csrf_token %}
+                    <div class="field">
+                        <label>Comment</label>
+                        {{ form.comment }}
+                        {{ form.content_type }}
+                        {{ form.object_pk }}
+                        {{ form.timestamp }}
+                        {{ form.security_hash }}
+                    </div>
+                    <button class="ui button" type="submit">Submit</button>
+                </form>
+            {% else %}
+                <p>Please <a href="{% url 'auth_login' %}">log in</a> to leave a comment.</p>
+            {% endif %}
+        </div>
     </div>
 </div>
 {% endblock content %}
