the projects page now displays projects in three columns

--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -37,7 +37,7 @@
 
             {% if projects %}
 
-                <div class="ui two doubling stackable cards">
+                <div class="ui three doubling stackable cards">
                 {% for project in projects %}
                     <div class="ui fluid card">
                         <div class="content">
