--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block left_menu %}
-<div class="ui container">
+<div class="ui container left attached">
     <a href="javascript:history.go(-1)" class="header item">
         <i class="left arrow icon"></i>
     </a>
