Submitting a comment now redirects to the page where the comment was posted

--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -99,6 +99,7 @@
                         {{ form.timestamp }}
                         {{ form.security_hash }}
                     </div>
+                    <input type="hidden" name="next" value="{% url 'projects:project' project.id %}" />
                     <button class="ui button" type="submit">Submit</button>
                 </form>
             {% else %}
