--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -7,7 +7,7 @@
 
 {% block left_menu %}
 <div class="ui container left attached">
-    <a href="javascript:history.go(-1)" class="header item">
+    <a href="{% url 'projects:index' project.hackathon.number %}" class="header item">
         <i class="left arrow icon"></i>
     </a>
 </div>
