The login box now works and is central. Fixed the redirect so that the project comments login brings you back to where you were

--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -123,7 +123,7 @@
                     <button class="ui button" type="submit">Submit</button>
                 </form>
             {% else %}
-                <p>Please <a href="{% url 'auth_login' %}">log in</a> to leave a comment.</p>
+            <p>Please <a href="{% url 'auth_login' %}?next={{request.path}}">log in</a> to leave a comment.</p>
             {% endif %}
         </div>
     </div>
