--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,36 +1,29 @@
 {% extends "auth/base.html" %}
 
 {% block content %}
-
+<div class="ui center aligned grid">
+    <div class="center aligned four wide column">
+        <div class="ui hidden divider"></div>
+<div class="ui raised segment">
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
-
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
-
+<div class="ui form">
 <form method="post" action="{% url 'auth_login' %}">
 {% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login" />
+<div class="field">
+    <label>{{ form.username.label_tag }}</label>
+    {{ form.username }}
+</div>
+<div class="field">
+    <label>{{ form.password.label_tag }}</label>
+    {{ form.password }}
+</div>
+<input class="ui submit button" type="submit" value="login" />
+</div>
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
-
-
+</div>
+</div>
+</div>
 {% endblock %}
