Basic signup form. Fails because the 'registration_complete' template is missing. tbd.

--- a/templates/auth/base.html
+++ b/templates/auth/base.html
@@ -12,7 +12,7 @@
         <h1 class="ui inverted header">
             Hackathon <i class="coffee icon"></i>
         </h1>
-        <h2>Login</h2>
+        {% block subheader %}<h2>Login</h2>{% endblock %}
     </div>
 </div>
 {% endblock %}
